src/objects/Airport_Fee_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>Aircraft_Type_Formula__c</fullName>
        <formula>IF(CONTAINS(TEXT( Aircraft_Type__c ),&quot;Lear&quot;),&quot;Lear&quot;,
IF(CONTAINS(TEXT( Aircraft_Type__c ),&quot;Global&quot;),&quot;Global&quot;,
TEXT( Aircraft_Type__c )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type__c</fullName>
        <label>Aircraft Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Aircraft_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport_Code__c</fullName>
        <label>Airport Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Name__c</fullName>
        <label>Operator Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <inlineHelpText>Only needed for CA, US</inlineHelpText>
        <label>State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Fee__c</fullName>
        <label>Tax Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Airport Fee Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Aircraft_Type__c</columns>
        <columns>Aircraft_Type_Formula__c</columns>
        <columns>Airport_Code__c</columns>
        <columns>Operator_Name__c</columns>
        <columns>State_Code__c</columns>
        <columns>Tax_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AFL-{00000}</displayFormat>
        <label>Airport Fee Lookup #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Airport Fee Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>